@@ -1,5 +1,10 @@
 2013-05-16  Hidehisa Akiyama  <akky@users.sourceforge.jp>
 
+	* src/qt4/action_sequence_selector.cpp:
+	* src/qt4/action_sequence_selector.h:
+	* src/qt4/debug_message_window.cpp:
+	- 行動のIDでフィルタする機能を追加
+
 	* src/qt4/color_setting_dialog.cpp:
 	* src/qt4/debug_log_painter.cpp:
 	* src/qt4/draw_config.cpp:
